2001-12-20  Bradford Hovinen  <hovinen@ximian.com>

	* background-properties-capplet.c: Update

	* Makefile.am: Update

	* background.desktop.in.in (Exec): Update

	* background-properties-capplet.c (dialog_button_clicked_cb):
	Remove call to apply_settings
	(apply_settings): Remove
	(main): Remove apply_only support

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* background.desktop.in.in:

	Add Categories field so it goes into the right location
	in the panel menus.

2001-12-18  Bradford Hovinen  <hovinen@ximian.com>

	* background-properties-capplet.c: Use gconf_client rather than
	gconf_engine
	(setup_dialog): Use correct path for enabled
	(main): Preload the background settings directory for performance
	Don't #include bonobo.h

	* background.schema: Update keys to use /desktop/gnome/background

	* background-properties-capplet.c (property_change_cb): Remove
	(create_dialog): Return GladeXML, not GtkWidget
	(setup_dialog): Put GladeXML in the signature rather than
	GtkWidget
	(peditor_value_changed): Retrieve color_frame directory rather
	than through Glade
	(real_realize_cb): Ditto
	(setup_dialog): Set color-frame rather than glade-data
	(main): Construct the preview applier here rather than in
	create_dialog
	(main): Unref the applier object when the dialog is destroyed
	(setup_dialog, create_dialog): Put the applier in the signature
	Use weak_ref rather than the destroy signal for all relevant
	objects
	Update GConf keys to use /desktop/gnome/background

2001-12-17  Bradford Hovinen  <hovinen@ximian.com>

	* background.desktop.in.in (Exec): Update

	* background-properties-capplet.c (setup_dialog): Don't hide
	opacity controls
	(dialog_button_clicked_cb): Apply settings after commiting the
	change set
	(peditor_value_changed): Implement
	(setup_dialog): Connect value-changed signals
	(setup_dialog): Store the applier in the preferences object
	(peditor_value_changed): Retrieve the applier from the preferences