@@ -1,3 +1,9 @@
+2001-12-20  Bradford Hovinen  <hovinen@ximian.com>
+
+	* mouse-properties-capplet.c (dialog_button_clicked_cb): Update
+	(main): Use a GtkDialog rather than GnomeDialog; don't place weak
+	ref on gtk_main_quit
+
 2001-12-20  Hans Petter Jansson  <hpj@ximian.com>
 
 	* Makefile.am: Remove rule that prevented install.
